--- a/app/src/main/res/layout/activity_three.xml
+++ b/app/src/main/res/layout/activity_three.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/teal_700"
-    tools:context=".ActivityThree">
+    android:background="@color/white"
+    tools:context=".PrevActivity">
 
 
     <Button
@@ -15,7 +15,8 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="100dp"
-        android:text="@string/game1" />
+        android:text="@string/game1"
+        android:backgroundTint="@color/green"/>
 
     <Button
         android:id="@+id/button2"
@@ -24,7 +25,8 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="200dp"
-        android:text="@string/game2" />
+        android:text="@string/game2"
+        android:backgroundTint="@color/green"/>
 
     <Button
         android:id="@+id/button3"
@@ -33,7 +35,8 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="300dp"
-        android:text="@string/game3" />
+        android:text="@string/game3"
+        android:backgroundTint="@color/green"/>
 
     <Button
         android:id="@+id/button4"
@@ -42,7 +45,8 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="400dp"
-        android:text="@string/game4" />
+        android:text="@string/game4"
+        android:backgroundTint="@color/green"/>
 
     <Button
         android:id="@+id/button5"
@@ -51,6 +55,7 @@
         android:textAlignment="center"
         android:layout_marginHorizontal="100dp"
         android:layout_marginTop="500dp"
-        android:text="@string/game5" />
+        android:text="@string/game5"
+        android:backgroundTint="@color/green"/>
 
 </RelativeLayout>
